--- a/datatables/package.json
+++ b/datatables/package.json
@@ -6,8 +6,12 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-html-table-to-excel": "^2.0.0",
+    "react-redux": "^6.0.0",
     "react-scripts": "2.1.1",
-    "react-table": "^6.8.6"
+    "react-table": "^6.8.6",
+    "redux": "^4.0.1",
+    "xlsx": "^0.14.1",
+    "yarn": "^1.12.3"
   },
   "scripts": {
     "start": "react-scripts start",
